# CVcli

./: CMakeLists.txt  README.md  cli.hpp
.cache/clangd/index/: command.hpp.CCB893580A08DDF7.idx  hashmap.hpp.69981A5F34C824AE.idx  main.cpp.4C0051CB6D6C6B30.idx  tools.hpp.DEBB6AE91B99F9D0.idx
include/: :wa  :wa:  cli.hpp  command.hpp  cvinstance.hpp  cvresult.hpp  fileio.hpp  globals.hpp  hashmap.hpp  main.cpp  strview.cpp  tools.cpp  tools.hpp
src/: :wa  cli.cpp  command.cpp  cvinstance.cpp  cvresult.cpp  fileio.cpp  globals.cpp  main.cpp
